# vinda

./: .gitignore  Dockerfile  README.md  build_and_package.sh  docker-compose.yaml  port_forwarding.sh  pyproject.toml  requirements.txt  setup.py  start_proxy.sh  stop_proxy.sh
api/: .env.example  README.md  requirements.txt  setup.cfg  setup.py
api/config/: config.py
api/core/: db.py  module.py  pattern.py  schemas.py
api/flowpilot/: app.py  main.py  version.py
api/flowpilot/blueprint/: blueprint.py  context.py  decorators.py  events.py
api/flowpilot/bpgraph/: README.md  call_function.py
api/flowpilot/common/: easydict.py  easytag.py  hooks.py  module.py  pydantic.py  utils.py
api/flowpilot/components/: celery.py  redis.py
api/flowpilot/config/: defaults.py
api/flowpilot/core/: module.py  pattern.py  utils.py  workflow.py
api/flowpilot/message_router/: __init__.py  message_router.py  tags.py
api/flowpilot/tasks/: celery_tasks.py
api/flowpilot/universe/: README.md  __init__.py  acotr.py  actor_model.py  ci_test.py  component.py  engine.py  main.py  (+7 more)
api/projects/: fairy.py  graph.json
api/tasks/: celery_app.py
api/tests/: test_basic_node.py  test_message_router.py  test_pycode_node.py
docker/: Dockerfile.base  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.yaml
docs/: README.md
scripts/: build_image.sh  download_weights.py  get_tiny_image_net.py  launch_worker.sh  save_cifar10.py  showcase.ipynb
vinda/: version.py
vinda-fe/: main.py
vinda/api/: app.py  config.py  onnxinfer.py  pattern.py  schemas.py  trainer.py  utils.py
(+49 files in other folders)
