[tool.poetry]
name = "vinda"
version = "0.1.0"
description = ""
authors = ["blank"]
readme = "README.md"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.4.0"
fastapi = "^0.111.1"
easydict = "^1.13"
pytorch-lightning = "^2.3.3"
timm = "^1.0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
